added authorization to hotel controllers